--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -37,43 +37,27 @@
                     </div>
                 </div>
 
-                <h2>Events</h2>
-                <div class="card">
-                    <div class="card-block">
-                        <iframe style="border:none;width:100%;"
-                                src="https://uga.givepulse.com/w/23030146caeb82fa4b1288952c5df633?"></iframe>
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="card-block">
-                        <a title="Events" href="{{ path('event') }}">See all upcoming events</a>
-                        {% for event in events %}
-                            <h3>{{ event.title }}</h3>
-                            <p>{% if event.start %}{{ event.start|date("l, F d") }} {{ event.start|date("g:i A") }}{% endif %}</p>
-                            <p>{% if event.location!='' %}{{ event.location }}{% endif %}</p>
-                            <p>{{ event.teaser|raw }}</p>
-                            <hr/>
-                        {% else %}
-                            <p>There are no events at this time. Please check back soon.</p>
-                        {% endfor %}
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="card-block">
-                        <a class="twitter-timeline" href="https://twitter.com/WatershedUGA"
-                           data-widget-id="644610687554162689">Tweets
-                            by @WatershedUGA</a>
-                        <script>!function (d, s, id) {
-                                var js, fjs = d.getElementsByTagName(s)[0], p = /^http:/.test(d.location) ? 'http' : 'https';
-                                if (!d.getElementById(id)) {
-                                    js = d.createElement(s);
-                                    js.id = id;
-                                    js.src = p + "://platform.twitter.com/widgets.js";
-                                    fjs.parentNode.insertBefore(js, fjs);
-                                }
-                            }(document, "script", "twitter-wjs");</script>
-                    </div>
-                </div>
+                {#<h2>Events</h2>#}
+                {#<div class="card">#}
+                    {#<div class="card-block">#}
+                        {#<iframe style="border:none;width:100%;"#}
+                                {#src="https://uga.givepulse.com/w/23030146caeb82fa4b1288952c5df633?"></iframe>#}
+                    {#</div>#}
+                {#</div>#}
+                {#<div class="card">#}
+                    {#<div class="card-block">#}
+                        {#<a title="Events" href="{{ path('event') }}">See all upcoming events</a>#}
+                        {#{% for event in events %}#}
+                            {#<h3>{{ event.title }}</h3>#}
+                            {#<p>{% if event.start %}{{ event.start|date("l, F d") }} {{ event.start|date("g:i A") }}{% endif %}</p>#}
+                            {#<p>{% if event.location!='' %}{{ event.location }}{% endif %}</p>#}
+                            {#<p>{{ event.teaser|raw }}</p>#}
+                            {#<hr/>#}
+                        {#{% else %}#}
+                            {#<p>There are no events at this time. Please check back soon.</p>#}
+                        {#{% endfor %}#}
+                    {#</div>#}
+                {#</div>#}
 
                 <h3>Watch our Introductory Video</h3>
                 <div class="card">
