--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -38,44 +38,44 @@
                 <li class="nav-item" id="skip">
                     <a class="nav-link" id="main_nav" href="#main_content">Skip Navigation</a>
                 </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="{{ path('page_show', { 'id':12 }) }}"
-                       id="navbarDropdownMenuLink1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        Faculty
-                    </a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink1">
-                        <a class="dropdown-item" href="{{ path('module') }}">Teaching Resources</a>
-                        <a class="dropdown-item" href="{{ path('page_show', { 'id':10 }) }}">Service Learning</a>
-                        <a class="dropdown-item" href="{{ path('page_show', { 'id':14 }) }}">Watershed UGA in the
-                            eLC</a>
-                        <a class="dropdown-item" href="{{ path('page_show', { 'id':49 }) }}">Faculty Forms</a>
-                    </div>
-                </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="{{ path('page_show', { 'id':41 }) }}"
-                       id="navbarDropdownMenuLink2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        Student
-                    </a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink2">
-                        <a class="dropdown-item" href="{{ path('page_show', { 'id':10 }) }}">How to Get Involved</a>
-                        <a class="dropdown-item" href="{{ path('opportunity', { 'type':'intern' }) }}">Internships</a>
-                        <a class="dropdown-item" href="{{ path('event') }}">Events</a>
-                        <a class="dropdown-item" href="{{ path('public_profiles') }}">Faculty Profiles
-                        </a>
-                    </div>
-                </li>
+{#                <li class="nav-item dropdown">#}
+{#                    <a class="nav-link dropdown-toggle" href="{{ path('page_show', { 'id':12 }) }}"#}
+{#                       id="navbarDropdownMenuLink1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">#}
+{#                        Faculty#}
+{#                    </a>#}
+{#                    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink1">#}
+{#                        <a class="dropdown-item" href="{{ path('module') }}">Teaching Resources</a>#}
+{#                        <a class="dropdown-item" href="{{ path('page_show', { 'id':10 }) }}">Service Learning</a>#}
+{#                        <a class="dropdown-item" href="{{ path('page_show', { 'id':14 }) }}">Watershed UGA in the#}
+{#                            eLC</a>#}
+{#                        <a class="dropdown-item" href="{{ path('page_show', { 'id':49 }) }}">Faculty Forms</a>#}
+{#                    </div>#}
+{#                </li>#}
+{#                <li class="nav-item dropdown">#}
+{#                    <a class="nav-link dropdown-toggle" href="{{ path('page_show', { 'id':41 }) }}"#}
+{#                       id="navbarDropdownMenuLink2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">#}
+{#                        Student#}
+{#                    </a>#}
+{#                    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink2">#}
+{#                        <a class="dropdown-item" href="{{ path('page_show', { 'id':10 }) }}">How to Get Involved</a>#}
+{#                        <a class="dropdown-item" href="{{ path('opportunity', { 'type':'intern' }) }}">Internships</a>#}
+{#                        <a class="dropdown-item" href="{{ path('event') }}">Events</a>#}
+{#                        <a class="dropdown-item" href="{{ path('public_profiles') }}">Faculty Profiles#}
+{#                        </a>#}
+{#                    </div>#}
+{#                </li>#}
 
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="{{ path('page_show', { 'id':41 }) }}"
-                       id="navbarDropdownMenuLink3" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        Community
-                    </a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink3">
-                        <a class="dropdown-item" href="{{ path('page_show', { 'id':42 }) }}">How to Partner with Us</a>
-                        <a class="dropdown-item" href="{{ path('opportunity', { 'type':'service' }) }}">Partners</a>
-                        <a class="dropdown-item" href="{{ path('event') }}">Events</a>
-                    </div>
-                </li>
+{#                <li class="nav-item dropdown">#}
+{#                    <a class="nav-link dropdown-toggle" href="{{ path('page_show', { 'id':41 }) }}"#}
+{#                       id="navbarDropdownMenuLink3" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">#}
+{#                        Community#}
+{#                    </a>#}
+{#                    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink3">#}
+{#                        <a class="dropdown-item" href="{{ path('page_show', { 'id':42 }) }}">How to Partner with Us</a>#}
+{#                        <a class="dropdown-item" href="{{ path('opportunity', { 'type':'service' }) }}">Partners</a>#}
+{#                        <a class="dropdown-item" href="{{ path('event') }}">Events</a>#}
+{#                    </div>#}
+{#                </li>#}
 
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="{{ path('page_show', { 'id':41 }) }}"
@@ -86,7 +86,7 @@
                         <a class="dropdown-item" href="{{ path('module') }}">Modules</a>
                         <a class="dropdown-item" href="{{ path('activity') }}">Activities</a>
                         <a class="dropdown-item" href="{{ path('file') }}">Files</a>
-                        <a class="dropdown-item" href="{{ path('mapset') }}">Maps</a>
+{#                        <a class="dropdown-item" href="{{ path('mapset') }}">Maps</a>#}
                     </div>
                 </li>
 
@@ -94,9 +94,9 @@
                 </li>
                 <li class="nav-item"><a class="nav-link" href="{{ path('page_show', { 'id':66 }) }}">Trail Creek</a>
                 </li>
-                <li class="nav-item"><a class="nav-link" href="{{ path('event') }}">Events</a></li>
-                <li class="nav-item"><a class="nav-link" href="{{ path('section') }}">Stories</a></li>
-                <li class="nav-item"><a class="nav-link" href="{{ path('page_show', { 'id': 9 }) }}">Donate</a></li>
+{#                <li class="nav-item"><a class="nav-link" href="{{ path('event') }}">Events</a></li>#}
+{#                <li class="nav-item"><a class="nav-link" href="{{ path('section') }}">Stories</a></li>#}
+{#                <li class="nav-item"><a class="nav-link" href="{{ path('page_show', { 'id': 9 }) }}">Donate</a></li>#}
             </ul>
             <a class="navbar-brand" target="_blank" href="https://www.instagram.com/watershed.uga">
                 <img title="Instagram" src="{{ asset('bundles/app/images/insta.gif') }}"/>
